--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,9 @@ language: node_js
 node_js:
   - "4.1"
 before_script:
-  - npm install -g wdio
-  - npm install -g jasmine
+  - npm install grunt-cli -g
+  - npm install wdio -g
+  - npm install jasmine -g
 addons:
   sauce_connect:
     username: "josephj6802_saucelab"
