--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "wdio wdio.config.js"
+    "test": "grunt"
   },
   "author": "josephj",
   "license": "ISC",
   "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-connect": "^0.11.2",
+    "grunt-webdriver": "^1.0.0",
     "jasmine": "^2.4.1"
   }
 }
