--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "grunt": "^0.4.5",
     "grunt-contrib-connect": "^0.11.2",
     "grunt-webdriver": "^1.0.0",
-    "jasmine": "^2.4.1"
+    "jasmine": "^2.4.1",
+    "webdriverio": "^3.4.0"
   }
 }
