--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-connect": "^0.11.2",
-    "grunt-sauce-connect-launcher": "^0.3.1",
+    "grunt-selenium-server": "^0.1.7",
     "grunt-webdriver": "^1.0.0",
     "jasmine": "^2.4.1",
     "webdriverio": "^3.4.0"
